--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Michael Mutinda <mmike8449@gmail.com>
+Annah Njuguna <njugunaannah@gmail.com>
